SF-2204 Fix page not found icon alignment

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/page-not-found/page-not-found.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/page-not-found/page-not-found.component.scss
@@ -4,8 +4,8 @@
   margin: 0 auto;
 }
 
-mdc-icon {
-  line-height: 1.2em;
-  vertical-align: top;
-  padding-right: 0.25em;
+h2 {
+  display: flex;
+  align-items: center;
+  column-gap: 4px;
 }
